CSS change to fix small gap at bottom of block container

--- a/src/css/idx-block-edit.css
+++ b/src/css/idx-block-edit.css
@@ -1,5 +1,6 @@
 .idx-block-placeholder-container img {
 	width: 100%;
+	margin-bottom: -3px;
 }
 
 /* Used to change the size of the size of the dashicon used for the IMPress Carousel, it is the only block not using a Font Awesome icon */
